# pommel

./: .gitignore  .gitmodules  CMakeLists.txt  DDR3.stats  Makefile  README.md  cmd-trace-chan-0-rank-0.cmdtrace  compression_investigation.ipynb  makefile  run.sh  run_activity.sh  run_alexnet.sh  run_cr_test.sh  run_mobilenet_v2.sh  run_networks.sh  run_pommel.sh  run_resnet18.sh  run_vgg11.sh  test.xml  tmp.sh  tmp.xml
baseline/: scale-sim-config.cfg
baseline/layer_wise/: input_cacti.rpt  output_cacti.rpt
config/: test_encoder.xml
include/: analysis.hpp  coding_scheme.hpp  common.hpp  config.hpp  controller.hpp  convert.hpp  dataflow.hpp  encoder.hpp  featuremap.hpp  report.hpp  stream_helper.hpp  trace.hpp
pommel/: __init__.py  accelerator.py  featuremap.py  memory.py  metrics.py  network.py  plot.py  report.py
runs/: run_activity.sh  run_alexnet.sh  run_mobilenet_v2.sh  run_resnet18.sh  run_vgg11.sh
scripts/: add_power_to_report.py  create_activity_bandwidth_graphs.py  create_test_featuremaps.py  evaluate_mem_power_investigation.py  generate_activity_bandwidth_network.py  generate_encoder_config.py  generate_network_config.py  generate_plots.py  generate_report.py  get_report.py  metrics.py  plot_accelerator.py  plot_all.py
src/: abe.cpp  analysis.cpp  awr.cpp  bi.cpp  coding_scheme.cpp  config.cpp  controller.cpp  convert.cpp  def.cpp  encoder.cpp  featuremap.cpp  general.cpp  huffman.cpp  main.cpp  pbm.cpp  rle.cpp  stream_helper.cpp  trace.cpp
templates/: cacti_template.tpl  ramulator_template.tpl  scale_sim_config_template.tpl
(+101 files in other folders)
